--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,6 +1,13 @@
 p {font-size: 17px;
   /* font-family: 'Times New Roman', Times, serif; */
 }
+h2 {
+  color:darkblue;
+}
+h3 {
+  color:darkblue;
+}
+
 td {text-align: center; }
 /* figcaption {text-align: center; position: inherit;} */
 ul {font-size: 17px;}
